Cyberduck
FTP, SFTP, WebDAV & Amazon S3 Browser for Mac OS X.
http://cyberduck.ch/

Changelog. Last modified: $Date$

3.4.2 (Apr-10-2010) [http://trac.cyberduck.ch/milestone/3.4.2]
- [Localize] Georgian Localization
- [Feature] Choose localization in preferences
- [Feature] Option to disable use of system proxy settings in preferences
- [Bugfix] Connections fail with at sign in username (WebDAV) (#4097)
- [Bugfix] SOCKS proxy support broken [#3803]

3.4.1 (Jan-17-2010) [http://trac.cyberduck.ch/milestone/3.4.1]
- [Feature] Display checksum of files in Info panel (S3, Rackspace Cloud Files) (#4043)
- [Bugfix] Incompatibilities when running on OS X 10.5 [#4102]

3.4 (Jan-16-2010) [http://trac.cyberduck.ch/milestone/3.4]
- [Localize] Serbian Localization
- [Feature] Support external editors with no ODB support for different file types (#3834)
- [Feature] Allow user to define applications to use for editing (#3112)
- [Feature] Configure Amazon CloudFront Streaming Distributions (S3) (#4069)

3.3.1 (Jan-05-2010) [http://trac.cyberduck.ch/milestone/3.3.1]
- [Feature] Support for new US West Location (S3)
- [Bugfix] Bookmark menu [#3924]
- [Bugfix] SOCKS proxy support broken [#3803]
- [Bugfix] Container listing limited to 10000 files (Rackspace Cloud Files) [#3950]
- [Bugfix] Synchronisation does not transfer files with equal size (#3100)
- [Bugfix] Selection in synchronize prompt (#3901)
- [Bugfix] Bonjour bookmarks ignore TXT record with path and credentials attributes (#3984)
- [Bugfix] Donation prompt cannot be supressed (#3937)
- [Bugfix] Error when uploading file with different display name from real filename (#4041)
- [Bugfix] Quick Connect needs extra keystroke to connect (#3801)
- [Bugfix] Password in non-default keychain are copied to login keychain (#2878)

3.3 (Nov-13-2009) [http://trac.cyberduck.ch/milestone/3.3]
- [Feature] Octal input field for permissions [#13]
- [Bugfix] Connect to default bookmark for new browser window [#3798]