@@ -28,9 +28,17 @@
         3.4.2</a></strong><br/>
 
     <ul>
-		<li>[Localize] Georgian Localization</li>
-		<li>[Feature] Choose localization in preferences</li>
-		<li>[Feature] Option to disable use of system proxy settings in preferences</li>
+        <li>[Localize] Georgian Localization</li>
+        <li>[Feature] Choose localization in preferences</li>
+        <li>[Feature] Option to disable use of system proxy settings in preferences</li>
+        <li>[Feature] Allow arbitrary input for bandwidth throttle (<a
+                href="http://trac.cyberduck.ch/ticket/1746">#1746</a>)
+        </li>
+        <li>[Feature] Read hostname alias from ~/.ssh/config (SFTP) (<a href="http://trac.cyberduck.ch/ticket/3819">#3819</a>)
+        </li>
+        <li>[Feature] Allow page setup configuration for browser view print (<a
+                href="http://trac.cyberduck.ch/ticket/4139">#4139</a>)
+        </li>
         <li>[Bugfix] Connections fail with at sign in username (WebDAV) (<a
                 href="http://trac.cyberduck.ch/ticket/4097">#4097</a>)
         </li>
